# window-gui-test

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  camera.h  glfw_enabled.h  main.cpp  shader.cpp  shader.h  sprite.fs  sprite.vs  types.h  window.cpp  window.h
fonts/: ArialFontAtlasMeta.csv  ArialFontAtlasMeta.json  scripts.csv  scripts.json
include/: renderer.h
shaders/: camera.fs  flat.fs  flat.vs  font.fs  font.vs  instanced_camera.vs  instanced_flat.fs  instanced_flat.vs  instanced_lighting.fs  instanced_lighting.vs  tile.fs  tile.vs
src/: camera.cpp  camera.h  fonts.cpp  fonts.h  gl_ubo.cpp  gl_ubo.h  glfw_enabled.cpp  glfw_enabled.h  instancedPrimitive.cpp  instancedPrimitive.h  main.c  main.cpp  primitive.cpp  primitive.h  renderer.c  renderer.cpp  shader.cpp  shader.h  texture.cpp  texture.h  types.h  window.cpp  window.h
unused/: mesh.h  model.cpp  model.h
